# langbot

./: .gitignore  README.md  main.py  pyproject.toml
langbot/: __init__.py  __main__.py
langbot/agent/: __init__.py  factory.py  mcp.py
langbot/agent/tools/: __init__.py  cron.py  message.py  web.py
langbot/bus/: __init__.py  events.py  queue.py
langbot/channels/: __init__.py  base.py  manager.py  qq.py  registry.py
langbot/cli/: __init__.py  commands.py
langbot/config/: __init__.py  schema.py  settings.py
langbot/cron/: __init__.py  service.py  types.py
langbot/providers/: __init__.py  registry.py
langbot/skills/clawhub/: SKILL.md
langbot/skills/github/: SKILL.md
langbot/skills/weather/: SKILL.md
langbot/store/: __init__.py  checkpoint.py
langbot/templates/: MEMORY.md
tests/: test.ipynb  test_pkg.py
~/.langbot/workspace/: SOUL.md  USER.md
